<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pedidos Móvil</string>
    <string name="new_client">Nuevo</string>
    <string name="customers">Clientes</string>
    <string name="invoices">Pedidos</string>
    <string name="companies">Empresas</string>
    <string name="products">Productos</string>
    <string name="search_hint">buscar...</string>
    <string name="details">Detalles</string>
    <string name="customer">Cliente</string>
    <string name="company">Empresa</string>
    <string name="product">Producto</string>
    <string name="address">Dirección</string>
    <string name="contact">Datos de contacto</string>
    <string name="fiscal">Datos fiscales</string>
    <string name="product_code">Código del producto</string>
    <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="save">Guardar</string>
    <string name="city">Ciudad</string>
    <string name="State">Estado</string>
    <string name="zip">Código postal</string>
    <string name="rfc">RFC</string>
    <string name="phone">Teléfono</string>
    <string name="email">E-mail</string>
    <string name="item_saved">Elemento guardado!</string>
    <string name="edit">Editar</string>
    <string name="new_item">Nuevo</string>
    <string name="quantity">Cantidad</string>
    <string name="total">Total</string>
    <string name="tax">Impuesto</string>
    <string name="select_customer">Seleccione un cliente...</string>
    <string name="select_company">Seleccione una compañía...</string>
    <string name="observations">Observaciones</string>
    <string name="discount">Descuento</string>
    <string name="options">Opciones</string>
    <string name="signature">Firma</string>
    <string name="importCustomers">Importar Clientes...</string>
    <string name="importCompanies">Importar Empresas...</string>
    <string name="importProducts">Importar Productos...</string>
    <string name="print">Imprimir</string>

</resources>
