<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/Button01"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:drawableLeft="@drawable/users"
        android:gravity="left|center_vertical"
        android:text="@string/customers"
        android:textSize="@dimen/text_32"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button02"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:drawableLeft="@drawable/agency"
        android:gravity="left|center_vertical"
        android:text="@string/companies"
        android:textSize="@dimen/text_32"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button03"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:drawableLeft="@drawable/products"
        android:gravity="left|center_vertical"
        android:text="@string/products"
        android:textSize="@dimen/text_32"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button04"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:drawableLeft="@drawable/invoice"
        android:gravity="left|center_vertical"
        android:text="@string/invoices"
        android:textSize="@dimen/text_32"
        android:textStyle="bold" />

</LinearLayout>
